2008-01-14  David Turner  <cillian64@googlemail.com>

	** Partial fix for bug #498095

	* gui/contact-editor/contact-editor.glade: Changed mnemonics on
	"Categories" and "Nickname" to fix a clash. 

2008-01-11  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #488213

	* gui/contact-editor/e-contact-editor.c: (extract_simple_field):
	Use global function e_icon_factory_pixbuf_scale for scaling pixbufs.

2008-01-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #448441

	* addressbook.error.xml: New message "error-read-only" added.
	* gui/contact-editor/e-contact-quick-add.c: (struct _QuickAdd),
	(merge_cb), (sanitize_widgets), (source_changed),
	(build_quick_add_dialog):
	Disable "OK" and "Edit Full" buttons if no source is selected.
	Also set always book from combo, do not use the new created.

2008-01-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #339813

	* gui/contact-editor/e-contact-editor.c: (e_contact_editor_create_date):
	Setting new option 'e_date_edit_set_twodigit_year_can_future' to FALSE.

2008-01-06  Michael Monreal  <michael.monreal@gmx.net>

	** Fix for bug #492188

	* gui/component/addressbook-view.c:

	Use the new Tangoized icons instead of deprecated icons from 
	gnome-icon-theme.

2008-01-06  Christian Krause  <chkr@plauener.de>

	** Fix for bug #506772

	* tools/evolution-addressbook-export.c: (main): Not-NULL check for a 
	string array before finding its length. 

2007-12-11  Sankar P  <psankar@novell.com>

	** Fix for bug #501969

	* gui/component/addressbook.c: (load_source_auth_cb):
	Passwords should not be forgotten on all errors

2007-12-06  David Turner  <cillian64@googlemail.com>

	** Fix for bug #468277

	* gui/component/addressbook-config.c: (eabc_general_offline):
	Added a mnemonic to "Copy book content locally for offline operation"

2007-12-05  Lucky Wankhede  <wlakke@novell.com>

	** Fix for bug #409121

	* gui/component/addressbook-view.c:
	* gui/widgets/e-addressbook-view.c: (save_as), (eab_view_save_as):